welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:7: error: value update is not a member of plm.universe.Direction
      if (getDirection()=Direction.OUEST) {
          ^