welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
  baisseBrosse()
  while( !estFaceMur() &&  (getDirection()!=Direction.NORD)) {
    if (!estFaceMur()) {
      avance()}
    else {
      if (getDirection()=Direction.OUEST) {
        droite()
        avance()
        droite()}
      else { gauche(); avance();gauche()}}
  }
}
